--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -219,14 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "125\n"
+      "125\n",
+      "[0, 8, 16, 24, 32, 40, 48, 56, 64, 72, 80, 88, 96, 104, 112, 120, 128, 136, 144, 152, 160, 168, 176, 184, 192, 200, 208, 216, 224, 232, 240, 248, 256, 264, 272, 280, 288, 296, 304, 312, 320, 328, 336, 344, 352, 360, 368, 376, 384, 392, 400, 408, 416, 424, 432, 440, 448, 456, 464, 472, 480, 488, 496, 504, 512, 520, 528, 536, 544, 552, 560, 568, 576, 584, 592, 600, 608, 616, 624, 632, 640, 648, 656, 664, 672, 680, 688, 696, 704, 712, 720, 728, 736, 744, 752, 760, 768, 776, 784, 792, 800, 808, 816, 824, 832, 840, 848, 856, 864, 872, 880, 888, 896, 904, 912, 920, 928, 936, 944, 952, 960, 968, 976, 984, 992]\n"
      ]
     }
    ],
@@ -237,7 +238,8 @@
     "\n",
     "for i in range(0,1000,8):\n",
     "    list4.append(i)\n",
-    "print(len(list4))"
+    "print(len(list4))\n",
+    "print(list4)"
    ]
   },
   {
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -316,14 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El numero de peronsas que tienen hijos es: 4\n"
+      "4 personas tienen hijos es\n"
      ]
     }
    ],
@@ -336,7 +338,7 @@
     "  if i[\"n_kids\"] > 0:\n",
     "    # Aumentamos el contador\n",
     "    personas_hijos += 1\n",
-    "print(f'El numero de peronsas que tienen hijos es: {personas_hijos}')"
+    "print(f'{personas_hijos} personas tienen hijos es')"
    ]
   },
   {
@@ -348,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 1}, {'name': 'Lucía', 'age': 22, 'n_kids': 2}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+      "El numero de hijos que tienen entre todos es: 10\n"
      ]
     }
    ],
@@ -365,10 +367,10 @@
     "# Creamos una variable para contar personas con hijos\n",
     "hijos_total = 0\n",
     "\n",
-    "for i in people:\n",
-    "  if i[\"n_kids\"] > 0:\n",
-    "    # Aumentamos el contador\n",
-    "    hijos_total += i[\"n_kids\"]\n",
+    "for persona in people:\n",
+    "    if 'n_kids' in persona:\n",
+    "      hijos_total += int(persona['n_kids'])\n",
+    "\n",
     "print(f'El numero de hijos que tienen entre todos es: {hijos_total}')"
    ]
   },
@@ -381,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 3}, {'name': 'Lucía', 'age': 22, 'n_kids': 4}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 2}, {'name': 'Lucía', 'age': 22, 'n_kids': 3}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
      ]
     }
    ],
